# Reviving-the-Legacy-ESP32-C3-Wireless-Adventure-A-Comprehensive-Guide-to-IoT-

5_rainmaker/: CMakeLists.txt  sdkconfig
5_rainmaker/components/app_wifi/: idf_component.yml
6_project_optimize/: CMakeLists.txt  sdkconfig  sdkconfig.old
6_project_optimize/components/app_storage/: CMakeLists.txt  Kconfig.projbuild  app_storage.h
6_project_optimize/components/app_wifi/: CMakeLists.txt  Kconfig.projbuild  app_wifi.c
6_project_optimize/components/light_driver/: light_driver.c
6_project_optimize/components/light_driver/include/: light_driver.h
6_project_optimize/main/: app_main.c
7_insights/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
7_insights/components/app_insights/: CMakeLists.txt  Kconfig  app_insights.c  app_insights.h  idf_component.yml
7_insights/components/app_wifi/: idf_component.yml
7_insights/components/button/: CMakeLists.txt  button_adc.c  iot_button.c
7_insights/components/button/include/: button_gpio.h
7_insights/components/button/test/: CMakeLists.txt  button_test.c
7_insights/components/light_driver/: iot_led.c
7_insights/main/: app_main.c
light/: partitions.csv  sdkconfig.old
light/components/app_storage/: app_storage.c
light/components/app_wifi/: app_wifi.h
light/components/button/: Kconfig  button_gpio.c
light/components/button/include/: button_adc.h  iot_button.h
light/components/light_driver/: CMakeLists.txt
light/components/light_driver/include/: iot_led.h
light/main/: app_main.c
