set(IDF_PATH $ENV{IDF_PATH})
string(REPLACE "\\" "/" IDF_PATH "${IDF_PATH}")
set(ENV{IDF_PATH} "${IDF_PATH}")
idf_component_register(SRCS "button_adc.c" "button_gpio.c" "iot_button.c"
                        INCLUDE_DIRS "include" 
                        			 "$ENV{IDF_PATH}/components/esp_adc/deprecated/include"
                        			 "$ENV{IDF_PATH}/components/esp_driver_gpio/include"
                        			 "$ENV{IDF_PATH}/components/driver/deprecated"
                        			 "$ENV{IDF_PATH}/components/esp_timer/include")
#                        PRIV_REQUIRES esp_adc_cal)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error=format -Wno-format)
